# CASSINIHackathon

./: .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js
backend/: .gitignore  Dockerfile  SWARM_CONTRACT.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/api/: auth.py  simulation.py  ws.py
backend/app/core/: config.py  database.py  limiter.py  redis.py
backend/app/models/: __init__.py  models.py
backend/app/swarm/: bridge.py  client.py
backend/echoswarm/: api.py  test_ws.html
frontend/: .env.example  package-lock.json  package.json
frontend/app/: index.html  package-lock.json  package.json
frontend/app/src/: App.tsx  index.css
frontend/auth/: index.html  package-lock.json  package.json
frontend/landing/: index.html  tailwind.config.js
frontend/landing/src/: index.css
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/auth/: AuthContext.tsx  demoAccounts.ts
frontend/src/components/: Dashboard.tsx  DashboardWrapper.tsx  PublicOnlyRoute.tsx  RiskMap.tsx  SiteBackground.tsx  SwarmModeModal.tsx
frontend/src/data/: adminBoundaries.ts  displayRegions.ts  (+3 more)
src/: App.tsx  styles.css
src/components/: Navbar.jsx  PricingSection.jsx  ProtectedRoute.tsx  PublicOnlyRoute.tsx  SiteBackground.tsx
src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx
stefan/: package-lock.json  package.json
stefan/src/: App.jsx
stefan1/: package-lock.json  package.json
stefan1/scripts/: generate-europe-admin-map.mjs
stefan1/src/: index.css
(+233 files in other folders)
